--- a/profile/index.html
+++ b/profile/index.html
@@ -78,6 +78,16 @@
               <input id="email" type="email" class="validate">
               <label class="active" for="email">Email</label>
             </div>
+            <div class="input-field col s12 m6">
+              <i class="material-icons prefix">call</i>
+              <input id="phone" type="tel" class="validate">
+              <label class="active" for="phone">Phone Number</label>
+            </div>
+            <div class="input-field col s12 m6">
+              <i class="material-icons prefix">subject</i>
+              <textarea id="description" class="materialize-textarea" length="200"></textarea>
+              <label for="description">Description</label>
+            </div>
           </div>
           <a id="save" href="#" class="waves-effect waves-green btn">Save</a>
         </form>
