--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <!-- Our Website Javascripts -->
     <script src="http://materializecss.com/bin/materialize.js"></script>
     <script src="http://materializecss.com/templates/starter-template/js/init.js"></script>
-
+    <script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
+    <script src="js/locationpicker.jquery.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
