--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <div ng-view></div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js"></script>
+
 
     <!-- Vendor: Angular, followed by our custom Javascripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
